--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <section class="footer">
     <footer>
-        <div class = "footer_div">  
+        <div class = "footer_div">
         <nav class="cover-navigation navigation--social">
           <ul class="navigation">
 
@@ -52,7 +52,7 @@
           </li>
           {% endif %}
 
-          
+
           {% if site.social.twitter %}
           <!-- Twitter -->
           <li class="navigation__item_social">
@@ -71,21 +71,21 @@
             </a>
           </li>
           {% endif %}
-          
+
           <!-- RSS -->
-          <li class="navigation__item_social">
+          <!-- <li class="navigation__item_social">
             <a href="/feed.xml" rel="author" title="RSS" target="_blank">
               <div class="footer-social-icon" style="background:url(/images/rss.png);"></div>
               <span class="label">RSS</span>
             </a>
-          </li>
+          </li> -->
 
           </ul>
         </nav>
 
         </div>
 
-        <div class = "footer_div">  
+        <div class = "footer_div">
            <p class="copyright text-muted">
             Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="https://leopardpan.cn/">leopardpan</a> |
             <iframe
