--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,4 +30,4 @@ layout: default
 </article>
 
 <!-- {% include new-old.html %} 打赏 -->
-{% include comments.html %}
+<!-- {% include comments.html %} -->
